Force vertical scrollbar to prevent page jumps.

--- a/_assets/stylesheets/_style.sass
+++ b/_assets/stylesheets/_style.sass
@@ -2,6 +2,12 @@
 // Global styles
 //
 
+html
+  // force vertical scrollbar to prevent page jumps.
+  overflow: scroll
+  overflow-x: hidden
+  overflow-y: scroll
+
 @media #{$small}
   h2
     font-size: 0.7 * $h2-font-size
